<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/single_row_audit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_location"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_checklist_name"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checklist_name" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_schedule_date"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/schedule_date" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_last_modified"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/last_modified" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_create_by"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_by" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_section_assigned"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sections_assigned" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_other_assigned"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:text="@string/other_assigned" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_status"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/status" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".95"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_start"
                style="@style/buttonViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:layout_margin="7dp"
                android:textAllCaps="false"
                android:background="@drawable/btn_selector"
                android:text="@string/btn_start" />

            <Button
                android:id="@+id/button_reassign"
                style="@style/buttonViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:background="@drawable/btn_selector"
                android:text="@string/btn_reassign" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B1B3B2" />


</LinearLayout>