<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/textview_heading"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:background="@drawable/main_audit_logo"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="@dimen/width"
            android:layout_height="@dimen/height"
            android:layout_gravity="center"
            android:background="@drawable/linear_shape"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_margin_top"
                android:padding="5dp">

                <EditText
                    android:id="@+id/adid_edittext"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/adid"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/password_edittext"
                    android:layout_width="@dimen/btn_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewStyle"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_as" />

                <RadioGroup
                    android:id="@+id/radiogroup_loginas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radiobtn_auditor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:button="@drawable/radio_selector"
                        android:text="@string/auditor"
                        android:textSize="20dp" />

                    <RadioButton

                        android:id="@+id/radiobtn_supervisor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:button="@drawable/radio_selector"
                        android:text="@string/supervisor"
                        android:textSize="@dimen/txt_sub_title" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/btn_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_info"
                    android:textSize="12sp"
                    android:padding="5dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_login"
            style="@style/buttonViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_selector"
            android:text="@string/login"
            android:textAllCaps="false" />

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/logo_margin_top"

            android:text="@string/version" />
    </LinearLayout>

</LinearLayout>
