<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/single_row_audit_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textview_location"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/location" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_checklist_name"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checklist_name" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_audit_date"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audit_date" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_audit_time"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audit_time" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <TextView
            android:id="@+id/textview_audited_by"
            style="@style/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/audited_by" />


        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#B1B3B2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".95"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_view"
                style="@style/buttonViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/btn_selector"
                android:text="@string/btn_view"
                android:textAllCaps="false" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#B1B3B2" />


</LinearLayout>