<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/other_remarks_popup_width"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF">

        <TextView
            android:id="@+id/title_other_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/unsaved_changes_pop_message"
            android:textSize="@dimen/adhoc_audit_txt_size" />
    </LinearLayout>



        <LinearLayout
            android:layout_below="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B1B3B2" />

            <TextView
                android:id="@+id/discard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/discard"
                android:textColor="@drawable/select_audit_text_selector"
                android:textSize="@dimen/adhoc_audit_txt_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B1B3B2" />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@drawable/select_audit_text_selector"
                android:textSize="@dimen/adhoc_audit_txt_size" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B1B3B2" />

            <TextView
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="@drawable/select_audit_text_selector"
                android:textSize="@dimen/adhoc_audit_txt_size" />


        </LinearLayout>

</RelativeLayout>
