<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_container_height"
        android:background="@color/dialog_header_color">

        <TextView
            style="@style/textViewStyleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/mandatory_title" />
    </LinearLayout>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/layout_header"
        android:background="#B1B3B2" />

    <LinearLayout
        android:id="@+id/sub_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_container_height"
        android:layout_below="@+id/line1"
        android:background="@color/dialog_header_color"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/textViewStyleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:padding="5dp"
            android:text="@string/chapter" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#B1B3B2" />

        <TextView
            style="@style/textViewStyleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:padding="5dp"
            android:text="@string/sub_section" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#B1B3B2" />

        <TextView
            style="@style/textViewStyleHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:padding="5dp"
            android:text="@string/questions_element" />
    </LinearLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/sub_header"
        android:background="#B1B3B2" />

    <ScrollView
        android:id="@+id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/line2"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearlayout_element_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#B1B3B2" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_selector"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="#fff" />
    </LinearLayout>
</RelativeLayout>
